W-15539121: Remove directed exports from `mule-artifact-ast-dependency-graph` (#13469)